# adventofcode

./: .gitignore  a.py  parser.py  template.py  utils.py
2015/04/: a-2.py  a.py
2016/: 01.py  02.py  03-1.py  03-2.py  04.py  05.py  08.py
2016/19/: a-p1.py  a-p2.py
2017/: 02.py
2017/01/: a.py  b.py
2017/03/: s.py
2017/04/: a-old.py  a.py
2017/05/: a-old.py  a.py
2017/06/: a-old.py  a.py
2017/07/: a-old.py  a.py
2017/08/: a-old.py  a.py
2017/09/: a-old.py  a.py
2017/10/: a-old.py  a.py
2017/11/: a-old.py  a.py
2017/12/: a-old.py  a.py
2017/13/: a-old.py  a.py
2017/14/: a-old.py  a.py
2017/15/: a-old.py  a.py
2017/16/: a-old.py  a.py
2017/17/: a-old.py  a.py
2017/18/: a-old.py  a.py  good.py  good2.py
2017/19/: a.py
2017/20/: a-old.py  a.py
2017/21/: a-old.py  a.py
2017/22/: a-old.py  a.py
2017/23/: a-old.py  a.py
2017/24/: a-old.py  a.py
2017/25/: a.py
2018-rust/: Cargo.toml
2018-rust/src/: day01.rs  day02.rs  day03.rs  dayXX.rs  lib.rs
2018/01/: a-p1.py  a-p2.py
2019/: intcodev1.py
2019-rust/: Cargo.toml  README.md  clippy.toml
2019-rust/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  dayXX.rs  lib.rs
2020/: a.py  asm-template.py
rust/: .gitignore  Cargo.toml
rust/mc-aoc/: Cargo.toml
rust/mc-aoc-solutions/: Cargo.toml
rust/mc-aoc-solutions/src/: main.rs  year2018.rs
rust/mc-aoc/src/: lib.rs
rust/mcpower-aoc-solutions/src/: main.rs
rust/src/: lib.rs  runner.rs  utils.rs  vector.rs
(+221 files in other folders)
