[package]
name = "adventofcode-mcpower-2019"
version = "0.1.0"
authors = ["mcpower <mcpower@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.2"
aoc-runner-derive = "0.2"
regex = "1"
lazy_static = "1.4.0"
