[package]
name = "mcpower-aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", default-features = false, features = ["clock", "std"] }
itertools = "0.10.5"
once_cell = "1.16.0"
regex = "1.7.0"
